--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,8 +3,8 @@
 
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/$REPO_NAME', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/button', '.']
 - name: 'gcr.io/cloudshell-images/custom-image-validation'
-  args: ['image_test.py', '--image', 'gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['image_test.py', '--image', 'gcr.io/$PROJECT_ID/button']
 images: ['gcr.io/$PROJECT_ID/$REPO_NAME']
 timeout: '1200s'
