fix pushed image name in cloudbuild.yaml
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,5 +6,5 @@ steps:
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/button', '.']
 - name: 'gcr.io/cloudshell-images/custom-image-validation'
   args: ['image_test.py', '--image', 'gcr.io/$PROJECT_ID/button']
-images: ['gcr.io/$PROJECT_ID/$REPO_NAME']
+images: ['gcr.io/$PROJECT_ID/button']
 timeout: '1200s'
