--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
     - uses: actions/setup-go@v1
       with:
         go-version: 1.14
+    - run: git config --global init.defaultBranch main # TODO remove later as git updates to a newer version
     - run: go mod download
     - name: Set up git
       run: |
