--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
     - name: Free disk space
       run: |
-        docker rmi $(docker image ls -aq)
+        docker system prune -a -f
         df -h
     - uses: actions/checkout@master
     - uses: actions/setup-go@v1
