--- a/integration.cloudbuild.yaml
+++ b/integration.cloudbuild.yaml
@@ -37,7 +37,11 @@ steps:
 
       pip3 install -r tests/requirements.txt --user
 
+      echo TEST_CMD: $TEST_CMD
+
+      echo RUN: $TEST_CMD --description "no config" --directory empty-appjson --expected_text 'hello, world'
       $TEST_CMD --description "no config" --directory empty-appjson --expected_text 'hello, world'
+
       $TEST_CMD --description "inline hooks" --directory hooks-prepostcreate-inline --expected_text 'AB'
 
       $TEST_CMD --description "external hooks" --directory hooks-prepostcreate-external --expected_text '3'
