Disable broken test for now

--- a/integration.cloudbuild.yaml
+++ b/integration.cloudbuild.yaml
@@ -48,7 +48,9 @@ steps:
       OUTPUT=$(curl $GEN_URL --silent)
       $TEST_CMD --description "generator, dirty" --directory envvars-generated --dirty --expected_text $OUTPUT
 
-      $TEST_CMD --description "options" --directory options --expected_text 'hello, world'
+      # FIX(glasnt): b/257360337
+      # $TEST_CMD --description "options" --directory options --expected_text 'hello, world'
+
       $TEST_CMD --description "options - http2" --directory options-http2 --expected_text 'hello, world'
 
       $TEST_CMD --description "options - require auth" --directory options-require-auth --expected_status 403
