--- a/integration.cloudbuild.yaml
+++ b/integration.cloudbuild.yaml
@@ -25,6 +25,7 @@ steps:
   - id: run tests
     name: gcr.io/$PROJECT_ID/button
     env:
+      - "DEBUG=${_DEBUG}"
       - "GOOGLE_CLOUD_PROJECT=$PROJECT_ID"
       - "GOOGLE_CLOUD_REGION=${_REGION}"
       - "GIT_BRANCH=${BRANCH_NAME}"
@@ -39,7 +40,7 @@ steps:
 
       $TEST_CMD --description "no config" --directory empty-appjson --expected_text 'hello, world'
 
-      $TEST_CMD --description "inline hooks" --directory hooks-prepostcreate-inline --expected_text 'AB' --debug
+      $TEST_CMD --description "inline hooks" --directory hooks-prepostcreate-inline --expected_text 'AB'
 
       $TEST_CMD --description "external hooks" --directory hooks-prepostcreate-external --expected_text '3'
       $TEST_CMD --description "external hooks, dirty" --directory hooks-prepostcreate-external --expected_text '3' --dirty
@@ -75,6 +76,7 @@ substitutions:
   _REGION: us-central1
   _REPO_URL: https://github.com/GoogleCloudPlatform/cloud-run-button
   _REPO_BRANCH: master
+  _DEBUG: ""
 
 options:
   machineType: "N1_HIGHCPU_32"
