--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version: 1.23
+    - run: git config --global init.defaultBranch main # TODO remove later as git updates to a newer version
     - run: go mod download
     - name: Set up git
       run: |
