feat: implement artifact registry integration (#273)
* feat: implement artifact registry integration

* WIP: update GAR code, bump golang version

* go fmt

* return thing

* return other thing

* bump integration tests go version

* cleanup, add proper ux

* debug confirm which filesystem we're filling

* oops

* update registry config

* update logic, comments

* use go 1.21, matching cloud shell latest

* go mod tidy

* add more potential cleanup options

* attempt removing glibc issues

* address code review

* (debug) remove potentially superfluous sudo

* lol

* correct artifact registry identifier

* note outstanding implementation

* update error handling

* enable artifactregistry, not containerregistry

* add error handling in tryFixServiceName

--- a/integration.cloudbuild.yaml
+++ b/integration.cloudbuild.yaml
@@ -1,6 +1,9 @@
 steps:
   - id: build go
     name: golang:${_VERSION}
+    env:
+      - CGO_ENABLED=0
+      - GOOS=linux
     args:
       [
         "go",
@@ -55,7 +58,7 @@ steps:
       $TEST_CMD --description "options - require auth" --directory options-require-auth --expected_status 403
       $TEST_CMD --description "custom buildpacks" --directory buildpacks-builder --expected_text 'hello, world'
 
-  
+
   - id: cleanup
     name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
     env:
@@ -72,7 +75,7 @@ steps:
 timeout: "3600s"
 
 substitutions:
-  _VERSION: "1.14"
+  _VERSION: "1.21"
   _REGION: us-central1
   _REPO_URL: https://github.com/GoogleCloudPlatform/cloud-run-button
   _REPO_BRANCH: master
