--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,13 @@ jobs:
     - name: Free disk space
       run: |
         docker system prune -a -f
+        sudo rm -rf /usr/local/lib/android
+        df /var/
         df -h
     - uses: actions/checkout@master
-    - uses: actions/setup-go@v1
+    - uses: actions/setup-go@v5
       with:
-        go-version: 1.14
+        go-version: 1.21
     - run: git config --global init.defaultBranch main # TODO remove later as git updates to a newer version
     - run: go mod download
     - name: Set up git
@@ -26,13 +28,14 @@ jobs:
       working-directory: ./cmd/cloudshell_open
     - name: Build docker image
       run: docker build -t runbutton .
+
   redirector:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: actions/setup-go@v1
+    - uses: actions/setup-go@v5
       with:
-        go-version: 1.14
+        go-version: 1.21
     - run: go mod download
       working-directory: ./cmd/redirector
     - name: Validate formatting with go fmt
