--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,36 @@
+# Copyright 2019 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 # Default cloudbuild.yaml for Cloud Shell custom images.
 # This file is used by the Cloud Build trigger that builds this image.
 
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/button', '.']
-- name: 'gcr.io/cloudshell-images/custom-image-validation'
-  args: ['image_test.py', '--image', 'gcr.io/$PROJECT_ID/button']
-images: ['gcr.io/$PROJECT_ID/button']
-timeout: '3600s'
+  - name: "gcr.io/cloud-builders/docker"
+    args:
+      [
+        "build",
+        "-t",
+        "gcr.io/$PROJECT_ID/button",
+        "-t",
+        "gcr.io/$PROJECT_ID/button:public-image-${COMMIT_SHA}",
+        ".",
+      ]
+  - name: "gcr.io/cloudshell-images/custom-image-validation"
+    args: ["image_test.py", "--image", "gcr.io/$PROJECT_ID/button"]
+images:
+  - "gcr.io/$PROJECT_ID/button"
+  - "gcr.io/$PROJECT_ID/button:public-image-${COMMIT_SHA}"
+timeout: "3600s"
 options:
-  machineType: 'N1_HIGHCPU_8'
+  machineType: "N1_HIGHCPU_8"
